styles.css
body{
    background-color: #fff;
    margin: 0;
    padding: 0;
    font-family: "Adobe Clean", "adobe-clean", sans-serif;
} 

img {
    max-width: 100%;
}

* {
    box-sizing: border-box;
}

header {
		position: sticky;
		display: flex;
    height: 64px;
    margin-left: 32px;
    margin-right: 32px;
}

header .icon {
    height: 24px;
    width: 20px;
}

header ul {
    display: flex;
    list-style: none;
}

header ul li {
    padding: 16px;
}

header p {
    padding: 16px;
    display: flex;
    align-items: center;
}

footer>div:first-of-type div > ul {
    display: flex;
    list-style: none;

}

footer>div:nth-of-type(2) div > ul {
    display: flex;
}

footer>div:nth-of-type(2) div > ul > li {
    padding: 16px;
    list-style: none;
}


footer .section-wrapper > div, main .section-wrapper > div {
    margin: auto;

    padding: 16px;
}

main a:any-link {
	color: #1473e6;
	text-decoration: none;
}

main .icon {
	height: 40px;
	width: 40px;
}

main .button {
	border-width: 2px;
	border-style: solid;
	border-radius: 16px;
	min-height: 32px;
	height: auto;
	min-width: 72px;
	padding: 4px 14px;
	padding-bottom: 4.5px;
	padding-top: 3.5px;
	font-size: 14px;
	font-weight: 700;
	transition: background .13s ease-out, border-color .13s ease-out, color .13s ease-out, box-shadow .13s ease-out;
  line-height: 1.3;
  -webkit-appearance: none;
}

main .button.primary {
	background-color: #1473e6;
	border-color: #1473e6;
	color: #fff;
}

main .button.primary:hover {
	background-color: #0d66d0;
	border-color: #0d66d0;
	color: #fff;
}

main .button.secondary {
	background-color: transparent;
	border-color: #505050;
	color: #505050;
}

main .button.secondary:hover {
	background-color: #505050;
	border-color: #505050;
	color: #fff;
}

main div.hero {
	display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  width: 100%;
}

main div.hero {
	color: white;
	background-size: cover;
	text-align: center;
	padding: 1em;
	background-position: center center;
}

main div.hero>div {
  display: flex;
  flex-direction: column;
  flex-basis: 100%;
  flex: 1;
}

main div.hero h1 {
	font-family: adobe-clean-serif, "Source Serif Pro", Georgia, serif;
	font-size: 45px;
	font-weight: 700;
}

main div.hero p {
	display: block;
	font-family: adobe-clean-ux, adobe-clean, "Source Sans Pro", -apple-system, system-ui, "Segoe UI", Roboto, sans-serif;
	font-size: 18px;
	font-weight: 400;
	line-height: 27px;

}

main div.embed-container {
	text-align: center;
	max-width: 640px;
	margin: auto;
}

